# mkdocs-pyapi

./: .gitignore  .gitmodules  LICENSE  Makefile  Makefile.dev  README.md  mkdocs-pyapi.yml  pyproject.toml
docs-md/docs/: index.md
docs-md/docs/reference/: sidebar.json
docs-md/docs/reference/mkdocs_pyapi/: gen_api.md  mkdocs_pyapi.md
docs-web/docs/: index.md
src/mkdocs_pyapi/: __init__.py  __main__.py  gen_api.py  mkdocs_pyapi.py
